// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default rendering Array<ReactNode> 1`] = `
<button
  className="Button Medium Black"
  data-tid="foo"
  data-track-button={true}
  disabled={false}
  name="bar"
  type="button"
>
  <div />
  <div />
  3
  string
  Fragment with key
</button>
`;

exports[`Button default rendering Button.Medium.Black 1`] = `
<button
  className="Button Medium Black"
  data-tid="foo"
  data-track-button={true}
  disabled={false}
  name="bar"
  type="button"
>
  test
</button>
`;

exports[`Button default rendering Button.Medium.Salamander 1`] = `
<button
  className="Button Medium Salamander"
  data-tid="foo"
  data-track-button={true}
  disabled={false}
  name="bar"
  type="button"
>
  test
</button>
`;

exports[`Button default rendering Stateful isSelected 1`] = `
<button
  aria-checked={true}
  className="Button Medium Stateful isSelected isSelected"
  data-tid="foo"
  data-track-button={true}
  disabled={false}
  name="bar"
  type="button"
>
  test
</button>
`;

exports[`Button default rendering Stateful isSelected White 1`] = `
<button
  aria-checked={true}
  className="Button Medium Stateful White isSelected isSelected"
  data-tid="foo"
  data-track-button={true}
  disabled={false}
  name="bar"
  type="button"
>
  test
</button>
`;
